--- a/README
+++ b/README
@@ -2,3 +2,4 @@
 This is the git repository created as a purpose of assignment
 
 Author: Nikhil Vijay
+URL: <a href="https://github.com/Nikhil-V-maker/devops_edureka1">Github repo</a>
